# huffman-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  alice_in_wonderland.txt  outfile.huff
.github/workflows/: cmake-single-platform.yml
Google_tests/: CMakeLists.txt  TestFrequencyAnalyzer.cpp  TestHuffmanCoder.cpp
include/: BinarySearchNode.h  BinarySearchTree.h  FrequencyAnalyzer.h  HuffFileMaker.h  HuffmanCoder.h  HuffmanTree.h  Node.h
src/: BinarySearchNode.cpp  BinarySearchTree.cpp  FrequencyAnalyzer.cpp  HuffFileMaker.cpp  HuffmanCoder.cpp  HuffmanTree.cpp  Node.cpp  main.cpp
tests/: fileio.cpp  generate_files.py  mybenchmark  random_file_test.sh  test1.sh
tests/output/: test1.txt.huff  test1.txt.temp  test1.txt.test
